@startuml

state AzureIoTConnection {
state Idle
    state Started {
        state Connecting
        Connecting : <b>MQTT_CONNECT_RSP(err_auth)/</b>
        Connecting : \t rotate_credentials();
        Connecting : \t ^MQTT_CONNECT_REQ

        state Connected
        Connected : <b>entry/</b> 
        Connected : \t pipeline_send(MQTT_CONNECT_RSP(success))

        state ReconnectTimeout
        ReconnectTimeout: <b>entry/</b> start timer;
        ReconnectTimeout: <b>exit/</b> stop timer

        state Disconnecting
        Disconnecting : <b>entry/</b> start timer; 
        Disconnecting : <b>exit/</b> stop timer

        [*] -> Connecting : ^MQTT_CONNECT_REQ
        Connecting --> Connected : MQTT_CONNECT_RSP(success)
        Connecting -> ReconnectTimeout : MQTT_CONNECT_RSP(timeout)
        Connecting --> Disconnecting : AZ_IOT_CLOSE / ^MQTT_DISCONNECT_REQ
        Connected --> Disconnecting : AZ_IOT_CLOSE / ^MQTT_DISCONNECT_REQ
        ReconnectTimeout -> Connecting : TIMEOUT
    }

    [*] --> Idle
    Idle -> Started : AZ_IOT_OPEN
    Started --> Idle : MQTT_DISCONNECT_RSP
    Started --> Faulted: ERROR, TIMEOUT/ pipeline_send(ERROR)

@enduml
